updates for gui

--- a/gui/makefile
+++ b/gui/makefile
@@ -7,8 +7,8 @@ all: compile_and_link clear_intermediate_files
 # Compile and link
 compile_and_link:
 > ocamlfind ocamlopt -thread -syntax camlp4o \
-> -package cohttp.lwt,uri,yojson,lwt,lwt.syntax,lwt.unix,str \
-> -linkpkg -o ClientNode p2p_client.ml
+> -package cohttp.lwt,uri,yojson,lwt,lwt.syntax,lwt.unix,str,lablgtk2,lwt.glib \
+> -linkpkg -o ClientNodeGui p2p_client.ml gui.ml main.ml
 
 clear_intermediate_files:
 > rm *.cmi *.cmx *.o
