moving gui.ml earlier in the compile chain so that p2p_client.ml can update the gui.

--- a/gui/makefile
+++ b/gui/makefile
@@ -4,11 +4,22 @@
 # Compile p2p_client to native code
 all: compile_and_link clear_intermediate_files
 
+byte: compile_and_link_byte clear_intermediate_files_byte
+
 # Compile and link
 compile_and_link:
 > ocamlfind ocamlopt -thread -syntax camlp4o \
 > -package cohttp.lwt,uri,yojson,lwt,lwt.syntax,lwt.unix,str,lablgtk2,lwt.glib \
-> -linkpkg -o ClientNodeGui p2p_client.ml gui.ml main.ml
+> -linkpkg -o ClientNodeGui gui.ml p2p_client.ml main.ml
+
+# Make a bytecode executable
+compile_and_link_byte:
+> ocamlfind ocamlc -custom -thread -syntax camlp4o \
+> -package cohttp.lwt,uri,yojson,lwt,lwt.syntax,lwt.unix,str,lablgtk2,lwt.glib \
+> -linkpkg -o ClientNodeGui.byte gui.ml p2p_client.ml main.ml
 
 clear_intermediate_files:
 > rm *.cmi *.cmx *.o
+
+clear_intermediate_files_byte:
+> rm *.cmi *.cmo
