Separated out the some types into user_info.ml and added the callback function later in the linking chain

--- a/gui/makefile
+++ b/gui/makefile
@@ -10,13 +10,13 @@ byte: compile_and_link_byte clear_intermediate_files_byte
 compile_and_link:
 > ocamlfind ocamlopt -thread -syntax camlp4o \
 > -package cohttp.lwt,uri,yojson,lwt,lwt.syntax,lwt.unix,str,lablgtk2,lwt.glib \
-> -linkpkg -o ClientNodeGui gui.ml p2p_client.ml main.ml
+> -linkpkg -o ClientNodeGui user_info.ml gui.ml p2p_client.ml gui_control.ml main.ml
 
 # Make a bytecode executable
 compile_and_link_byte:
 > ocamlfind ocamlc -custom -thread -syntax camlp4o \
 > -package cohttp.lwt,uri,yojson,lwt,lwt.syntax,lwt.unix,str,lablgtk2,lwt.glib \
-> -linkpkg -o ClientNodeGui.byte gui.ml p2p_client.ml main.ml
+> -linkpkg -o ClientNodeGui.byte user_info.ml gui.ml p2p_client.ml gui_control.ml main.ml
 
 clear_intermediate_files:
 > rm *.cmi *.cmx *.o
